--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: "Massimo's Webapage and blog"
 keywords: "Quadrana,phd,PhD,blog,resume,papers"
 
 baseurl: "/"
-url: "http://mquad.github.io"
+url: "http://mobisys.github.io"
 # url: "http://127.0.0.1:4000"
 
 # author
