--- a/_config.yml
+++ b/_config.yml
@@ -1,54 +1,37 @@
-# Welcome to Jekyll!
 
-# Website settings
-title: "Massimo Quadrana's Webpage"
-description: "Massimo's Webapage and blog"
-keywords: "Quadrana,phd,PhD,blog,resume,papers"
+exclude:
+  - "/vendor/"
+  - "Gemfile"
+  - "Gemfile.lock"
+  - "README.md"
+  - "LICENSE.md"
+  - "*.gemspec"
 
-baseurl: "/"
-url: "http://mobisys.github.io"
-# url: "http://127.0.0.1:4000"
+keep_files:
+  - "CNAME"
+  - ".git"
+  - ".gitignore"
 
-# author
-author:
-  name: 'Massimo Quadrana'
-  first_name: 'Massimo'
-  last_name: 'Quadrana'
-  email: 'massimo.quadrana@polimi.it'
-  github_username: 'mquad'
-  head_img: 'static/img/landing/max.jpg'
 
-# landing page
-landing:
-  home: 'Home'
-  about: 'About'
-  career: 'Career'
-  papers: 'Papers'
-  contact: 'Link'
-
-# blog index
-# index:
-#   home: 'Home'
-#   python: 'Python'
-#   linux: 'Linux'
-#   html: 'HTML'
-#   database: 'Database'
-#   mac: 'Mac'
-#   life: 'Life'
-
-# comment
-changyan:
-  # appid: cysfY7ULn
-  # conf: prod_861928934cecb7a18e15bedaed9dae29
-
-# blog img path
-img_path: '/static/img/blog'
+# Site settings
+title: Safebox
+subtitle: "A safe place to run your apps"
+url: "http://mobisys.github.io" # the base hostname & protocol for your site
+# baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
+baseurl: ""
+cover: "/assets/cover.png"
+logo: "/assets/logo.png"
 
 # Build settings
-encoding: "utf-8"
-
-highlighter: rouge
 markdown: kramdown
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
+
+# Google analytics
+# ga_tracking_id: "UA-XXXX-1"
+
+# Category descriptions (for archive pages)
+descriptions:
+  - cat: jekyll
+    desc: "Posts describing Jekyll setup techniques."
+
+  - cat: dummy
+    desc: "Just some placeholder posts, lorem ipsum and the rest."
